banner scroll view

--- a/AppLovin Mediation Waterfall Demo/AppLovin Mediation Waterfall Demo/Storyboards and Xibs/AppLovinMediation.storyboard
+++ b/AppLovin Mediation Waterfall Demo/AppLovin Mediation Waterfall Demo/Storyboards and Xibs/AppLovinMediation.storyboard
@@ -77,9 +77,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="Qe2-O9-85t" kind="popoverPresentation" identifier="" popoverAnchorView="4da-Dd-sBT" id="Hie-Ov-gyK">
-                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                    </segue>
+                                    <segue destination="Qe2-O9-85t" kind="show" identifier="" id="Hie-Ov-gyK"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wsm-AX-qCY" userLabel="Interstitial Button">
